<resources>
    <string name="app_name">Cookbook</string>
    <string name="action_edit">Edit</string>
    <string name="sample_recipe_name">Buttermilk</string>
    <string name="sample_ingredients">2 cups whole milk \n1 egg \n250 grams butter \n120 grams brown sugar</string>
    <string name="sample_instructions">1. Mix egg and sugar until creamy \n2. Add butter \n4. Mix in half of milk \n5. Put in container and freeze for 4 hours or overnight</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_instructions">Instructions</string>
    <string name="hint_recipe_instructions">Enter the steps for preparing the recipe</string>
    <string name="hint_recipe_ingredients">Enter a list of ingredients</string>
    <string name="action_cancel">Close</string>
    <string name="action_save">Save</string>
    <string name="title_recipes">Recipes</string>
    <string name="action_add">Add</string>
    <string name="hint_ingredients">Enter a list of ingredients</string>
    <string name="hint_instructions">Enter instruction steps</string>
    <string name="title_name">Name</string>
    <string name="hint_name">Enter a name for the recipe</string>
    <string name="action_delete">Delete</string>
</resources>
