<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recipe"
            type="com.example.cookbook.Recipe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_edit_recipe"
            style="@style/Widget.Cookbook.ActionBar"
            android:title="@string/action_edit"
            app:menu="@menu/toolbar_edit_recipe"
            tools:title="@string/sample_recipe_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scroll_edit_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_recipe"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:contentDescription="@{recipe.name}"
                        android:cropToPadding="false"
                        app:imageResource="@{recipe.image}"
                        tools:src="@mipmap/pancakes" />

                    <TextView
                        android:id="@+id/text_title_ingredients"
                        style="@style/RecipeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_ingredients" />

                    <EditText
                        android:id="@+id/text_edit_ingredients"
                        style="@style/RecipeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter a list of ingredients"
                        android:text="@{recipe.ingredients}"
                        tools:text="@string/sample_ingredients" />

                    <TextView
                        android:id="@+id/text_title_instructions"
                        style="@style/RecipeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_instructions" />

                    <EditText
                        android:id="@+id/text_edit_instructions"
                        style="@style/RecipeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter instruction steps"
                        android:text="@{recipe.instructions}"
                        tools:text="@string/sample_instructions" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:text="@string/action_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>