<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.cookbook.presentation.recipe.detail.RecipeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_recipe"
            style="@style/Widget.Cookbook.ActionBar"
            android:title="@{viewModel.currentRecipe.name}"
            app:menu="@menu/toolbar_recipe"
            tools:title="@string/sample_recipe_name" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@{viewModel.currentRecipe.name}"
                    android:cropToPadding="false"
                    app:imageResource="@{viewModel.currentRecipe.image}"
                    tools:src="@mipmap/pancakes"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:id="@+id/text_title_ingredients"
                    style="@style/RecipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_ingredients" />

                <TextView
                    android:id="@+id/text_ingredients"
                    style="@style/RecipeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.currentRecipe.ingredients}"
                    tools:text="@string/sample_ingredients" />

                <TextView
                    android:id="@+id/text_title_instructions"
                    style="@style/RecipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_instructions" />

                <TextView
                    android:id="@+id/text_instructions"
                    style="@style/RecipeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.currentRecipe.instructions}"
                    tools:text="@string/sample_instructions" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>